<resources>
    <string name="app_name">Cinematch</string>
    <string name="go_back">Go Back</string>
    <string name="access_account">Access your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create a new account</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="following">Following</string>
    <string name="following_follower_count">0</string>
    <string name="followers">Followers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="time">time</string>
    <string name="search">Search</string>
    <string name="favorite_button">Add to favorite button</string>
    <string name="add_to_movie_list_button">Add to movie list button</string>
    <string name="reviews">Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="details">Details</string>
    <string name="release_date">Release Date:</string>
    <string name="countries_of_origin">Countries of Origin:</string>
    <string name="languages">Languages:</string>
    <string name="runtime">Runtime:</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="add_to_your_list">Add to your list</string>
    <string name="activity">Activity</string>
    <string name="no_activities_yet">No activities yet. Follow a user to see their activities!</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_users">Search Users</string>
    <string name="explore_cinematch">Explore Cinematch!</string>
    <string name="welcome_description">Discover, connect, and enjoy the world of movies.</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="friend_s_recent_likes">Friend\'s Recent Likes</string>
    <string name="their_verdict">Their Verdict</string>
    <string name="movie_title">Movie Title</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="follow">Follow</string>
    <string name="add_a_new_review">Add a new review</string>
    <string name="add_review_hint">Add review…</string>
    <string name="add_review">Add Review</string>
    <string name="movie_details">Movie Details</string>
    <string name="no_reviews_yet">No reviews yet. Be the first to share your thoughts!</string>
    <string name="genres">Genres:</string>
    <string name="original_language">Original Language:</string>
    <string name="minutes">%1$s minutes</string>
    <string name="unknown">Unknown</string>
    <string name="plot_unknown">Plot Unknown.</string>
    <string name="search_not_found">Sorry, we couldn\'t find what you were looking for.</string>
    <string name="follow_list">Follow List</string>
    <string name="unfollow">Unfollow</string>
    <string name="your_lists">Your Lists</string>
    <string name="follow_back">Follow Back</string>
    <string name="their_lists">Their Lists</string>
    <string name="delete_movie_list">Delete Movie List</string>
    <string name="empty_list">Your movie list is empty. Browse and add movies to your list!</string>
    <string name="create_a_new_list">Create a new list</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="create_a_blend">Create a Blend</string>
    <string name="blended">Blended!</string>
    <string name="other_empty_list">This movie list is empty.</string>
    <string name="by_username">by %1$s</string>
    <string name="edit_movie_list">Edit Movie List</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="add_to_list">Add to List</string>
    <string name="this_user_does_not_follow_anyone_when_another_user_follows_this_account_theyll_appear_here">This user does not follow anyone. When another user follows this account they\'ll appear here.</string>
    <string name="this_user_does_not_have_any_followers_when_another_user_follows_this_account_they_ll_show_up_here">This user does not have any followers. When another user follows this account they\'ll show up here.</string>
    <string name="verdict">Verdict</string>
</resources>