<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_profile"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.slepetbangkit.cinematch.view.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_edit_profile"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.slepetbangkit.cinematch.view.profile.editprofile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.slepetbangkit.cinematch.view.profile.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_about_us"
            app:destination="@id/navigation_about_us" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.slepetbangkit.cinematch.view.profile.aboutus.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>