<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_activity"
    app:startDestination="@id/navigation_activity">

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.slepetbangkit.cinematch.view.activity.ActivityFragment"
        android:label="@string/activity"
        tools:layout="@layout/fragment_activity" >
        <action
            android:id="@+id/action_navigation_activity_to_navigation_other_profile"
            app:destination="@id/navigation_other_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_self_profile"
        android:name="com.slepetbangkit.cinematch.view.profile.selfprofile.SelfProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_self_profile" >
        <action
            android:id="@+id/action_navigation_self_profile_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_self_profile_to_navigation_edit_profile"
            app:destination="@id/navigation_edit_profile" />
        <action
            android:id="@+id/action_navigation_self_profile_to_navigation_self_follow_list"
            app:destination="@id/navigation_self_follow_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.slepetbangkit.cinematch.view.profile.editprofile.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.slepetbangkit.cinematch.view.profile.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_about_us"
            app:destination="@id/navigation_about_us" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.slepetbangkit.cinematch.view.profile.aboutus.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/navigation_self_follow_list"
        android:name="com.slepetbangkit.cinematch.view.profile.followlist.selffollowlist.SelfFollowListFragment"
        android:label="@string/follow_list"
        tools:layout="@layout/fragment_self_follow_list" >
        <action
            android:id="@+id/action_navigation_self_follow_list_to_navigation_other_profile"
            app:destination="@id/navigation_other_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_other_profile"
        android:name="com.slepetbangkit.cinematch.view.profile.otherprofile.OtherProfileFragment"
        android:label="OtherProfileFragment"
        tools:layout="@layout/fragment_other_profile"  >
        <action
            android:id="@+id/action_navigation_other_profile_to_navigation_other_follow_list"
            app:destination="@id/navigation_other_follow_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_other_follow_list"
        android:name="com.slepetbangkit.cinematch.view.profile.followlist.otherfollowlist.OtherFollowListFragment"
        android:label="@string/follow_list"
        tools:layout="@layout/fragment_other_follow_list" >
        <action
            android:id="@+id/action_navigation_other_follow_list_to_navigation_other_profile"
            app:destination="@id/navigation_other_profile" />
        <action
            android:id="@+id/action_navigation_other_follow_list_to_navigation_self_profile"
            app:destination="@id/navigation_self_profile" />
    </fragment>

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_movie_details"-->
    <!--        android:name="com.slepetbangkit.cinematch.view.moviedetails.MovieDetailsFragment"-->
    <!--        android:label="@string/details"-->
    <!--        tools:layout="@layout/fragment_movie_details" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_reviews"-->
    <!--        android:name="com.slepetbangkit.cinematch.view.moviereviews.MovieReviewsFragment"-->
    <!--        android:label="@string/reviews"-->
    <!--        tools:layout="@layout/fragment_movie_reviews" />-->

    <!--    <fragment-->
    <!--        android:id="@+id/navigation_review"-->
    <!--        android:name="com.slepetbangkit.cinematch.view.moviereviews.IndividualReviewFragment"-->
    <!--        android:label="@string/individual_review"-->
    <!--        tools:layout="@layout/fragment_individual_review" />-->
    <!--    -->
    <!--    <fragment-->
    <!--        android:id="@+id/navigation_add_review"-->
    <!--        android:name="com.slepetbangkit.cinematch.view.moviereviews.AddReviewFragment"-->
    <!--        android:label="@string/add_review"-->
    <!--        tools:layout="@layout/fragment_add_review" />-->

</navigation>