<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral"
    tools:context=".view.profile.editprofile.EditProfileFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/baseline_chevron_left_24"
        android:background="?android:selectableItemBackground"
        app:tint="@color/on_neutral"
        app:layout_constraintBottom_toBottomOf="@+id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_tv" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textColor="@color/on_neutral"
        android:textSize="20sp"
        android:text="@string/edit_movie_list"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back" />


    <TextView
        android:id="@+id/uname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textColor="@color/on_neutral"
        android:textSize="16sp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <com.slepetbangkit.cinematch.view.custom.EditText
        style="@style/EditText"
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:textSize="12sp"
        app:fieldType="username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uname_label" />

    <TextView
        android:id="@+id/bio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textColor="@color/on_neutral"
        android:textSize="16sp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <com.slepetbangkit.cinematch.view.custom.EditText
        style="@style/EditText"
        android:id="@+id/edt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:maxLines="3"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bio_label" />

    <com.google.android.material.button.MaterialButton
        style="@style/Button"
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:textSize="16sp"
        android:text="@string/save"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonOutline"
        android:id="@+id/btn_delete_list"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:textColor="@color/error"
        android:textSize="16sp"
        android:text="@string/delete_movie_list"
        android:visibility="visible"
        app:strokeColor="@color/error"
        app:strokeWidth="1dp"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="gone"
        android:indeterminateTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="@+id/btn_save"
        app:layout_constraintStart_toStartOf="@+id/btn_save"
        app:layout_constraintTop_toTopOf="@+id/btn_save"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>