<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="338dp"
        android:layout_height="0dp"
        android:background="@color/neutral_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedCard" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/movie_poster_img"
        android:layout_width="155dp"
        android:layout_height="227dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_challengers_xlg"
        app:shapeAppearanceOverlay="@style/RoundedPoster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/movie_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:text="@string/movie_title"
        android:textColor="@color/on_neutral"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie_poster_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_year_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_regular"
        android:textColor="@color/on_neutral"
        android:textSize="13sp"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/movie_title_tv"
        app:layout_constraintTop_toBottomOf="@id/movie_title_tv" />

    <TextView
        android:id="@+id/movie_rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:textColor="@color/primary"
        android:textSize="13sp"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="@id/movie_year_tv"
        app:layout_constraintTop_toBottomOf="@id/movie_year_tv" />

    <TextView
        android:id="@+id/movie_review_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:maxLines="6"
        android:text="@string/review"
        android:textColor="@color/on_neutral"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_img"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/movie_rating_tv"
        app:layout_constraintTop_toBottomOf="@id/movie_rating_tv" />
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/primary_variant"
        android:src="@drawable/baseline_account_circle_24"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"
        app:tint="@color/primary"
        app:layout_constraintStart_toStartOf="@id/movie_review_tv"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/plus_jakarta_sans_semi_bold"
        android:text="@string/username"
        android:textColor="@color/on_neutral"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_img"
        app:layout_constraintTop_toTopOf="@id/profile_img" />

</androidx.constraintlayout.widget.ConstraintLayout>